--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/5c8ced355c.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
     <!-- Font Marvel -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
